# douyin-dl-gui

./: .gitignore  README.md  douyin_dl.spec  installer.iss  pyproject.toml  requirements.txt
.github/workflows/: build-windows.yml
douyin_dl/: __init__.py  __main__.py  auth_bot.py  browser_fallback.py  cli.py  cookie_store.py  downloader.py  fetcher.py  file_namer.py  link_parser.py  models.py  pipeline.py  progress.py
douyin_dl/gui/: __init__.py  __main__.py  app.py  input_panel.py  settings_panel.py  status_bar.py  task_table.py  worker.py
tests/: test_auth_bot.py  test_browser_fallback.py  test_cli.py  test_cookie_store.py  test_downloader.py  test_e2e.py  test_fetcher.py  test_file_namer.py  test_gui_components.py  test_gui_integration.py  test_link_parser.py  test_pipeline.py  test_progress_pipeline.py
